Major cleaning of code. No logical change.